force-app/main/default/objects/Negoptim__Batch_Settings__mdt/fields/Negoptim__Active__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>