force-app/main/default/objects/Negoptim__Batch_Settings__mdt/fields/Negoptim__Allow_Sending_Notification__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Allow_Sending_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Sending Notification</label>
    <type>Checkbox</type>
</CustomField>