force-app/main/default/objects/Negoptim__Batch_Settings__mdt/fields/Negoptim__Description__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>