force-app/main/default/objects/Negoptim__Batch_Settings__mdt/fields/Negoptim__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>