force-app/main/default/objects/Negoptim__Batch_Settings__mdt/fields/Negoptim__Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Profile_Id__c</fullName>
    <defaultValue>$Profile.Id</defaultValue>
    <label>Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>