force-app/main/default/objects/Negoptim__Batch_Settings__mdt/fields/Negoptim__Sender__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Sender__c</fullName>
    <label>Sender</label>
    <type>Email</type>
</CustomField>